# kernel

./: Cargo.toml  build.rs  cpp-files.txt
docs/: CLI_manifest.md  README.md  architecture.md  check.md  conversion.md  convertME.md  convertNOW.md  cpp_to_rust_translation.md  hal_traits_spec.md  index.md  log_changes.md  phase_a_boot_bringup.md  phase_b_virtual_memory.md  phase_c_threads_syscalls.md  phase_d_kernel_objects.md  phase_e_memory_features.md  phase_f_multiplatform.md  phase_g_userspace_sdk.md  phase_h_qa_testing.md  phase_i_docs_governance.md  qemu_testing.md  qemu_testing.txt  rustica_checklist.txt  struct.txt  syscall_abi_spec.md
kernel-efi/: .gitignore  Cargo.toml
kernel-efi/src/: main.rs
rustux_macros/: Cargo.toml
rustux_macros/src/: lib.rs
src/: bitmap.rs  bits.rs  debug.rs  err.rs  fbl.rs  lk.rs  main.rs  platform.rs  rand.rs  reg.rs  struct.txt  trace.rs
src/kernel/: align.rs  allocator.rs  atomic.rs  cmdline.rs  cpu.rs  debug.rs  dpc.rs  exception.rs  hypervisor.rs  init.rs  kernel_minimal.ld  lib.rs  mmu.rs  mod.rs  mp.rs  mutex.rs  percpu.rs  pmm.rs  spinlock.rs  thread_lock.rs  timer.rs
src/kernel/arch/: arch_traits.rs  mod.rs
src/kernel/arch/amd64/: aal.rs  apic.rs  arch.rs  asm.rs  bootstrap16.rs  cache.rs  debugger.rs  descriptor.rs  exceptions.S  faults.rs  feature.rs  ffi.rs  gdt.S  idt.rs  image.S  interrupts.rs  ioport.rs  mexec.S  mmu.rs  mod.rs  mp.rs  multiboot_header.S  ops.rs  page_tables.rs  registers.rs  rules.mk  smp.rs  start.S  start16.S  sys_x86.c  sys_x86.h  syscall.S  syscall.rs  syscalls.rs  timer.rs  tsc.rs  uspace_entry.rs
src/kernel/arch/arm64/: aal.rs  (+32 more)
src/kernel/dev/: mod.rs
src/kernel/lib/: arena.rs  cbuf.rs  code_patching.rs  console.rs  counters.rs  crashlog.rs  debug.rs  debugcommands.rs  debuglog.rs  fixed_point.rs  gfx.rs  gfxconsole.rs  heap.rs  io.rs  ktrace.rs  libc.rs  lockdep.rs  memory_limit.rs  mtrace.rs  oom.rs  pci.rs  pow2_range_allocator.rs  prng.rs  topology.rs  userboot.rs  vdso.rs  version.rs  watchdog.rs
src/kernel/object/: channel.rs  event.rs  handle.rs  job.rs  mod.rs  timer.rs  vmo.rs
src/kernel/process/: mod.rs
src/kernel/sched/: mod.rs
src/kernel/sync/: event.rs  mod.rs  mutex.rs  spin.rs  wait_queue.rs
src/kernel/syscalls/: channel.rs  ddk.rs  ddk_arm64.rs  ddk_pci.rs  ddk_x86.rs  debug.rs  event.rs  exception.rs  exceptions.rs  fifo.rs  futex.rs  handle_ops.rs  hypervisor.rs  mod.rs  object.rs  object_wait.rs  pager.rs  port.rs  profile.rs  resource.rs  rustux.rs  socket.rs  system.rs  system_arm64.rs  system_riscv64.rs  system_x86.rs  task.rs  test.rs  timer.rs  vmar.rs  vmo.rs  wrapper.rs
src/kernel/tests/: alloc_checker_tests.rs  benchmarks.rs  cache_tests.rs  clock_tests.rs  conformance.rs  fibo.rs  lock_dep_tests.rs  mem_tests.rs  mod.rs  mp_hotplug_tests.rs  preempt_disable_tests.rs  printf_tests.rs  resource_tests.rs  runner.rs  sleep_tests.rs  string_tests.rs  sync_ipi_tests.rs  thread_tests.rs  timer_tests.rs  uart_tests.rs
src/kernel/thread/: mod.rs
src/kernel/usercopy/: mod.rs
src/kernel/vm/: arch_vm_aspace.rs  aspace.rs  boottables.rs  debug.rs  fault.rs  init.rs  layout.rs  mod.rs  page_table.rs  pager.rs  physmap.rs  pmm.rs  stacks.rs  stats.rs  vm_object.rs  walker.rs
src/rustux/: compiler.rs  errors.rs  mod.rs  tls.rs  types.rs
tests/: kernel_tests.rs
uefi-loader/: Cargo.toml
uefi-loader/src/: main.rs
user/: editor.rs  shell.rs
userspace/crt/: Cargo.toml
userspace/crt/src/: lib.rs
userspace/libc-rx/: Cargo.toml
userspace/libc-rx/src/: lib.rs  stdio.rs  stdlib.rs  string.rs  unistd.rs
userspace/libipc/: Cargo.toml
userspace/libipc/src/: channel.rs  event.rs  lib.rs  port.rs
userspace/librt/: Cargo.toml
userspace/librt/src/: condvar.rs  lib.rs  mutex.rs  thread.rs  timer.rs
userspace/libsys/: Cargo.toml
userspace/libsys/src/: error.rs  handles.rs  lib.rs  object.rs  syscall.rs
userspace/scripts/: build-all.sh
userspace/tests/hello/: Cargo.toml  main.rs  main.toml
(+166 files in other folders)
