[package]
name = "rustux_macros"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Castillo <lacrimatus@gmail.com>"]
description = "Procedural macros for the Rustux kernel test framework"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
