# Copyright 2025 The Rustux Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "libsys"
version = "0.1.0"
edition = "2021"
authors = ["The Rustux Authors"]

[lib]
name = "sys"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
bitflags = "2.0"

# Build userspace as no_std
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
