# Copyright 2025 The Rustux Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "hello"
version = "0.1.0"
edition = "2021"
authors = ["The Rustux Authors"]

[[bin]]
name = "hello"
path = "main.rs"

[dependencies]
libsys = { path = "../../libsys" }
libipc = { path = "../../libipc" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
